methods.flowerpot.FlowerCase.scala.error
Compilation error:
FlowerCase:2: error: not found: value jardinet
  jardinet();
  ^