methods.flowerpot.FlowerCase.scala.code
def growFlowers() {
  jardinet();
  left();forward();forward();right();forward();
  makeFlowers(Color.BLUE)
  
}

def jadinet(){
  makeFlowers(Color.RED);
  forward();forward();forward();
  makeFlowers(Color.CYAN);
  right();forward();
  forward();
  left();backward();backward();backward()
  makeFlowers(Color.ORANGE);
  backward();
  backward(); backward();
  right();
  forward();
  forward();
  left();
  makeFlowers(Color.PINK);
  forward();forward();forward();
  makeFlowers(Color.GREEN);
}

def makeFlowers(c:Color) {
  setBrushColor(c);
  brushDown();
  forward();
  left();
  forward();
  backward();
  right();
  forward();
  backward();
  right();
  forward();
  backward();
  left();
  setBrushColor(Color.YELLOW);
  brushUp();
}